# Shell_Arc

./: .gitignore  Dockerfile  Dockerfile.dc  Dockerfile.itemi  Dockerfile.nullai  Dockerfile.stweb  LICENSE  README.html  README.md  README_blenderaddon.md  ShellArc_intro.html  changelog.txt  docker-compose.yml  docker-compose.yml.template  home.py  index.html  issue.txt  project_setting.yaml  pyproject.toml  requirements.txt  shellarc_core_api_guide.md  ホーム.py
.devcontainer/: devcontainer.json
ShellArc2026/ShellArc2026/: __init__.py  blender_prefs.py  blender_ui.py  requirements.txt  shellarc_action.py  shellarc_blender_action.py  shellarc_blender_ui.py  shellarc_core_action.py  shellarc_ui_action.py  ui_trigger.py
ShellArc2026_Windows_x86_64/ShellArc2026/: __init__.py  (+5 more)
backend/: access_database.py  access_r2.py  access_spread_sheet.py  common_initialisation.py  file_operation.py  linker_parser.py  load_spread_sheet.py  request_r2.py  yaml_to_json_convertor.py
blender_addon/: ShellArc2026.py  blender_prefs.py  blender_ui.py
discord_bot/: discord_chatbot.py  discord_config.json  discord_connection.py  discord_notice_webhook.py  emulator.py  sapyc_intepreter.py  test.py
null_ai_chat/: city_id.json  discord_chatbot.py
null_itemi_action/: itemi_action.py
pages/: 1_プロジェクト設定.py  2_提出.py  3_取得.py  4_検査.py  提出.py
shell_arc_mobile/: app.json  package-lock.json  package.json
shellarc_devkit/: backup_on_local.py  cloud_access_check.py  key_encoder.py  project_init_cli.py
shellarc_native/: README.md  pyproject.toml
shellarc_native/src/: main.py
web/: 1_プロジェクト設定.py  2_提出.py  3_取得.py
(+105 files in other folders)
