[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shellarc_core"]

[project]
name = "shell_arc"
version = "2026.1.1"
dependencies = [
    "firebase_admin",
    "gspread",
    "oauth2client",
    "boto3",
    "PyYAML",
    "platformdirs",
    "python-dotenv", 
    "discord.py"
]
requires-python = ">=3.9"
authors = [
  {name = "shinonome-MiDUki", email = "shiinaayame3@gmail.com"}
]
maintainers = [
  {name = "shinonome-MiDUki", email = "shiinaayame3@gmail.com"}
]
description = "Shell Arc 2026"
readme = "README.md"
license = "Apache-2.0"
keywords = ["python", "shell_arc]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Documentation = "https://github.com/shinonome-MiDUki/Shell_Arc"
Repository = "https://github.com/shinonome-MiDUki/Shell_Arc.git"
Changelog = "https://github.com/shinonome-MiDUki/Shell_Arc/changelog.txt"


